--- a/_posts/2018-03-26-租船问题(小学四年级下册数学题).md
+++ b/_posts/2018-03-26-租船问题(小学四年级下册数学题).md
@@ -18,7 +18,7 @@ tags:
 
 ---
 问题：
-![image](img/rent_boat.png) 
+![image](https://github.com/hongjiapeng/hongjiapeng.github.io/raw/master/img/rent_boat.png) 
 ---
 
 笔者分了三种情况讨论：<br>
@@ -29,9 +29,10 @@ tags:
 第一种情况：42÷8=5（只）...2（人），不能整除，所以得需要6只船，6×64=384（元）<br>
 第二种情况：42÷6=7（只），7×54=378（元）<br>
 第三种情况：<br>
-![image](https://github.com/hongjiapeng/hongjiapeng.github.io/tree/master/img/by_boat.png) 
+![image](https://github.com/hongjiapeng/hongjiapeng.github.io/raw/master/img/by_boat.png) 
 
 下面是把这三种情况都放在了excel中：<br>
 
-![image](https://github.com/hongjiapeng/hongjiapeng.github.io/tree/master/img/boat.png) <br>
+![](/img/by_boat.png)
+
 你有什么别的解法吗？欢迎留言~
