--- a/_posts/2018-03-26-租船问题(小学四年级下册数学题).md
+++ b/_posts/2018-03-26-租船问题(小学四年级下册数学题).md
@@ -18,7 +18,7 @@ tags:
 
 ---
 问题：
-![](/img/rent_boat.png) 
+![rent_boat](https://github.com/hongjiapeng/hongjiapeng.github.io/raw/master/img/rent_boat.png)
 ---
 
 笔者分了三种情况讨论：<br>
