--- a/_posts/2018-03-26-租船问题(小学四年级下册数学题).md
+++ b/_posts/2018-03-26-租船问题(小学四年级下册数学题).md
@@ -17,8 +17,10 @@ tags:
 今天小妹问我一道算术题，给她开视频讲解后感觉她还是不太明白，授人以鱼不如授人以渔，干脆写篇博客给她链接吧~<br>
 
 ---
+
 问题：
 ![rent_boat](https://github.com/hongjiapeng/hongjiapeng.github.io/raw/master/img/rent_boat.png)
+
 ---
 
 笔者分了三种情况讨论：<br>
@@ -35,4 +37,9 @@ tags:
 
 ![](/img/boat.png)
 
+综上所述：当租3只大船和3只小船最省钱，需要354元。<br>
+
+
 你有什么别的解法吗？欢迎留言~
+
+![xxx](http://img07.tooopen.com/images/20170316/tooopen_sy_201956178977.jpg)
