--- a/_posts/2018-03-09-C#7.0新特性(VS2017可用).md
+++ b/_posts/2018-03-09-C#7.0新特性(VS2017可用).md
@@ -61,12 +61,65 @@ C#7.0之前，使用out参数可能不像我们想的那样方便。在你调用
 	 	p.GetCoordinates(out var x, out var y);
 
 <h3 id="2">2.Tuples (元组)</h3>
+在.NET4.0中,微软对多个返回值给了我们一个解决方案叫元组,类似代码如下:
 
 
+		static void Main(string[] args)
+ 		{
+            var data = GetFullName();
+            Console.WriteLine(data.Item1);
+            Console.WriteLine(data.Item2);
+            Console.WriteLine(data.Item3);
+            Console.ReadLine();
+		}
+		static Tuple<string, string, string> GetFullName() 
+		{
+           return  new Tuple<string, string, string>("a", "b", "c");
+		}
+
+上面代码展示了一个方法,返回含有3个字符串的元组,然而当我们获取到值,使用的时候 心已经炸了,Item1,Item2,Item3是什么鬼,虽然达到了我们的要求,但是实在不优雅。而在C#7.0中,微软提供了更优雅的方案:(注意:需要通过nuget引用System.ValueTuple)如下:
+
+		static void Main(string[] args)
+        {
+            var data=GetFullName();
+            Console.WriteLine(data.a); //可用命名获取到值
+            Console.WriteLine(data.b);
+            Console.WriteLine(data.c);
+            Console.ReadLine();
+
+        }
+        //方法定义为多个返回值,并命名
+        private static (string a,string b,string c) GetFullName()
+        {
+            return ("a","b","c");
+        }
+
+解构元组,有的时候我们不想用var匿名来获取,那么如何获取abc呢?我们可以如下:
+
+
+		static void Main(string[] args)
+        {
+           //定义解构元组
+            (string a, string b, string c) = GetFullName();
+
+            Console.WriteLine(a);
+            Console.WriteLine(b);
+            Console.WriteLine(c);
+            Console.ReadLine();
+
+        }
+        private static (string a,string b,string c) GetFullName()
+        {
+            return ("a","b","c");
+        }
+
+<h3 id="3">3.Discards (丢元)</h3>
 
 参考文档：<br>
 1. [C# 7.0 新功能](https://blogs.msdn.microsoft.com/dotnetcn/2017/01/22/c-7-0-%E6%96%B0%E5%8A%9F%E8%83%BD/)，原文地址[What’s New in C# 7.0](https://blogs.msdn.microsoft.com/dotnet/2016/08/24/whats-new-in-csharp-7-0/)<br>
-2. [干货来袭.C#7.0新特性(VS2017可用)](http://www.cnblogs.com/GuZhenYin/p/6526041.html)
+2. [干货来袭.C#7.0新特性(VS2017可用)](http://www.cnblogs.com/GuZhenYin/p/6526041.html)<br>
+3. [开源翻译](https://www.oschina.net/translate/whats-new-in-csharp-7-0)<br>
+4. [欢迎使用.NET](https://docs.microsoft.com/zh-cn/dotnet/welcome)
 
 
 
