--- a/_posts/2018-03-31-英语早读.md
+++ b/_posts/2018-03-31-英语早读.md
@@ -1,26 +1,29 @@
 ---
-layout:     post
-title:      一周英文纵横(早读原文)
+layout: post
+title:  一周英文纵横(早读原文)
 subtitle:   早读原文
-date:       2018-03-26
-author:     JP
+date:   2018-03-26
+author: JP
 header-img: img/post-bg-debug.png
 catalog: true
 tags:
-    - 英语
-    - 早读
-    
+- 英语
+- 早读
+
 ---
 
 >  **英语早读** 
 
-[你可以点我取一个完美英文名(#^.^#)](http://ename.shanbay.com.cn)
+[点我取一个完美英文名(#^.^#)](http://ename.shanbay.com.cn)
 
 [Day18 3.31 早读原文](http://mp.weixin.qq.com/s/IIQF8Tf4Ce36UfRTugxMTg)
 
 When you're young,it's all fillet steak,but as the years go by,you have to move on the cheaper cuts.
 
 当你年轻时候，你都可以锦衣玉食，但随着年华流逝，你不得不转向粗茶淡饭。
+
+<audio style="height:0;width:0;display:none" autoplay="" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTEzMDQy">
+</audio>
 
 [Day17 3.30 早读原文](http://mp.weixin.qq.com/s/3eLkbdTE9NEt6C19obsVXQ)
 
