modify reading_early blog

--- a/_posts/2018-03-31-英语早读.md
+++ b/_posts/2018-03-31-英语早读.md
@@ -22,9 +22,11 @@ When you're young,it's all fillet steak,but as the years go by,you have to move 
 
 当你年轻时候，你都可以锦衣玉食，但随着年华流逝，你不得不转向粗茶淡饭。
 
-<audio style="height:0;width:0;display:none" autoplay="" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTEzMDQy">
+<audio style="height:10;width:10;display:none" autoplay="0" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTEzMDQy">
 </audio>
-
+<div align=life> 
+<iframe frameborder="no" marginwidth="0" marginheight="0" width=400 height=140 src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTEzMDQy"></iframe>
+</div>
 [Day17 3.30 早读原文](http://mp.weixin.qq.com/s/3eLkbdTE9NEt6C19obsVXQ)
 
 The first step in solving any problem,is recognizing there is one.
