modify readingng_early blog

--- a/_posts/2018-03-31-英语早读.md
+++ b/_posts/2018-03-31-英语早读.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  一周英文纵横(早读原文)
+title:  陪你早读的 TeacherGwen
 subtitle:   早读原文
 date:   2018-03-26
 author: JP
@@ -12,7 +12,22 @@ tags:
 
 ---
 
->  **英语早读** 
+>  **英语早读**
+
+
+header 1 | header 2
+---|---
+row 1 col 1 | row 1 col 2
+row 2 col 1 | row 2 col 2
+
+
+<div align=life> 
+<iframe frameborder="no" marginwidth="0" marginheight="0" width=400 height=140 src="https://music.163.com/outchain/player?type=2&id=34341360&auto=0&height=66"></iframe>
+</div>
+
+<div align=life> 
+<iframe frameborder="no" marginwidth="0" marginheight="0" width=400 height=140 src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTEzMDQy"></iframe>
+</div>
 
 [点我取一个完美英文名(#^.^#)](http://ename.shanbay.com.cn)
 
@@ -22,8 +37,10 @@ When you're young,it's all fillet steak,but as the years go by,you have to move 
 
 当你年轻时候，你都可以锦衣玉食，但随着年华流逝，你不得不转向粗茶淡饭。
 
-<audio style="height:140;width:400;" autoplay="" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTEzMDQy">
+<audio style="height:140;width:400;" autoplay src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTEzMDQy">
 </audio>
+
+<mpvoice frameborder="0" class="" src="/cgi-bin/readtemplate?t=tmpl/audio_tmpl&amp;name=%E6%97%A9%E8%AF%BB-331&amp;play_length=01:46" isaac2="1" low_size="204.88" source_size="204.9" high_size="829.45" name="早读-331" play_length="106000" voice_encode_fileid="MzI4OTAyODUxNF8yNjUzNTEzMDQy"></mpvoice>
 
 [Day17 3.30 早读原文](http://mp.weixin.qq.com/s/3eLkbdTE9NEt6C19obsVXQ)
 
