add readingng_early blog

--- a/_posts/2018-03-31-英语早读.md
+++ b/_posts/2018-03-31-英语早读.md
@@ -14,33 +14,23 @@ tags:
 
 >  **英语早读**
 
-
-header 1 | header 2
----|---
-row 1 col 1 | row 1 col 2
-row 2 col 1 | row 2 col 2
-
-
-<div align=life> 
-<iframe frameborder="no" marginwidth="0" marginheight="0" width=400 height=140 src="https://music.163.com/outchain/player?type=2&id=34341360&auto=0&height=66"></iframe>
-</div>
-
-<div align=life> 
-<iframe frameborder="no" marginwidth="0" marginheight="0" width=400 height=140 src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTEzMDQy"></iframe>
-</div>
-
 [点我取一个完美英文名(#^.^#)](http://ename.shanbay.com.cn)
+
+[Day19 4.01 早读原文](https://mp.weixin.qq.com/s/K1bFV2fIIZIcuu_RIDy5Iw)
+
+Almost none of us commit suicide,and almost all of us self-destruct.
+
+我们几乎没有人自杀，几乎所有人都自我毁灭。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTEzMDQ2">
+</audio>
+
 
 [Day18 3.31 早读原文](http://mp.weixin.qq.com/s/IIQF8Tf4Ce36UfRTugxMTg)
 
 When you're young,it's all fillet steak,but as the years go by,you have to move on the cheaper cuts.
 
 当你年轻时候，你都可以锦衣玉食，但随着年华流逝，你不得不转向粗茶淡饭。
-
-<audio style="height:140;width:400;" autoplay src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTEzMDQy">
-</audio>
-
-<mpvoice frameborder="0" class="" src="/cgi-bin/readtemplate?t=tmpl/audio_tmpl&amp;name=%E6%97%A9%E8%AF%BB-331&amp;play_length=01:46" isaac2="1" low_size="204.88" source_size="204.9" high_size="829.45" name="早读-331" play_length="106000" voice_encode_fileid="MzI4OTAyODUxNF8yNjUzNTEzMDQy"></mpvoice>
 
 [Day17 3.30 早读原文](http://mp.weixin.qq.com/s/3eLkbdTE9NEt6C19obsVXQ)
 
