--- a/_posts/2018-03-31-英语早读.md
+++ b/_posts/2018-03-31-英语早读.md
@@ -32,11 +32,17 @@ When you're young,it's all fillet steak,but as the years go by,you have to move 
 
 当你年轻时候，你都可以锦衣玉食，但随着年华流逝，你不得不转向粗茶淡饭。
 
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTEzMDQy">
+</audio>
+
 [Day17 3.30 早读原文](http://mp.weixin.qq.com/s/3eLkbdTE9NEt6C19obsVXQ)
 
 The first step in solving any problem,is recognizing there is one.
 
 解决问题的第一步，首先要承认有问题存在。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTEzMDM0">
+</audio>
 
 [Day16 3.29 早读原文](http://mp.weixin.qq.com/s/DXNQb1fLyM1Sd63R7PfJ-w)
 
@@ -44,11 +50,17 @@ Life is not about many blows you take.It is about how hard you hit back.
 
 生活不在于你受到多少打击，而在于你如何用尽全力回击。
 
-[Day15 3.28 早读原文](http://mp.weixin.qq.com/s/ZM6lrtOK3H4VWxfz0_JXDA)
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTEzMDA3">
+</audio>
+
+[Day15 3.28 早读原文](http://mp.weixin.qq.com/s/Xi_8njlcD5UgnJ22BVCflQ)
 
 Moon river,wider than a mile,I'm crossing you in style some day.
 
 月亮河，宽不过一里，来日优雅地见到你。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTEyOTk5">
+</audio>
 
 [Day14 3.27 早读原文](http://mp.weixin.qq.com/s/ZM6lrtOK3H4VWxfz0_JXDA)
 
@@ -56,15 +68,18 @@ Choosing our people is the closest we come to controlling our destiny.
 
 选择和我们相伴的人，是最容易控制我们命运的方法了。
 
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTEyOTkz">
+</audio>
+
 [Day13 3.26 早读原文](http://mp.weixin.qq.com/s/H9AU4lNDxr3m4gkzBGHRTw)
 
 Very quietly I take my leave,<br> As quietly as I came here;<br> Quietly I wave good-bye,<br> To the rosy clouds in the western sky.
 
 轻轻的我走了，<br>正如我轻轻的来；<br>我轻轻的招手，<br>作别西天的云彩。
 
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTEyOTcx">
+</audio>
 
 ---
-
-
 
 ![xxx](http://img07.tooopen.com/images/20170316/tooopen_sy_201956178977.jpg)
