--- a/_posts/2018-04-02-英语早读.md
+++ b/_posts/2018-04-02-英语早读.md
@@ -16,6 +16,23 @@ tags:
 
 [点我取一个完美英文名(#^.^#)](http://ename.shanbay.com.cn)
 
+[Day20 4.02 早读原文](http://mp.weixin.qq.com/s/ibjq-H6P1HD4itNNYs9P4Q)
+
+When I was young/
+I'd listen to the radio/
+waiting for my favorite songs/
+When they played I'd sing along/
+It made me smile.
+
+当我年轻的时候<br>
+我时常听收音机<br>
+等待我最喜爱的歌曲<br>
+当它们放出的时候，我会跟着唱<br>
+它让我快乐
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTEzMDgx">
+</audio>
+
 [Day19 4.01 早读原文](https://mp.weixin.qq.com/s/K1bFV2fIIZIcuu_RIDy5Iw)
 
 Almost none of us commit suicide,and almost all of us self-destruct.
