modify reading_early blog

--- a/_posts/2018-04-02-英语早读.md
+++ b/_posts/2018-04-02-英语早读.md
@@ -18,10 +18,10 @@ tags:
 
 [Day20 4.02 早读原文](http://mp.weixin.qq.com/s/ibjq-H6P1HD4itNNYs9P4Q)
 
-When I was young/
-I'd listen to the radio/
-waiting for my favorite songs/
-When they played I'd sing along/
+When I was young<br>
+I'd listen to the radio<br>
+waiting for my favorite songs<br>
+When they played I'd sing along<br>
 It made me smile.
 
 当我年轻的时候<br>
