--- a/_posts/2018-04-02-英语早读.md
+++ b/_posts/2018-04-02-英语早读.md
@@ -16,6 +16,19 @@ tags:
 
 [点我取一个完美英文名(#^.^#)](http://ename.shanbay.com.cn)
 
+<div align=life> 
+<iframe frameborder="no" marginwidth="0" marginheight="0" width=400 height=140 src="https://music.163.com/outchain/player?type=2&id=28875230&auto=0&height=66"></iframe>
+</div>
+
+[Day21 4.03 早读原文](http://mp.weixin.qq.com/s/BJXADWHr3QELqDMmK0TjmA)
+
+Through education,we can become a country where everyone,from every background gain the skills they need to get a good jog and live a happy and fulfilled life.<br>
+
+通过教育，国之为国，每个人无论出身，都将习得技能，捕获工作，拥有幸福、满足的生活。<br> 读书明理做人，教育的意义是让人明心见性，止于至善。<br>
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTEzMTIz">
+</audio>
+
 [Day20 4.02 早读原文](http://mp.weixin.qq.com/s/ibjq-H6P1HD4itNNYs9P4Q)
 
 When I was young<br>
