add reading_early blog

--- a/_posts/2018-04-04-英语早读.md
+++ b/_posts/2018-04-04-英语早读.md
@@ -16,6 +16,16 @@ tags:
 
 [点我取一个完美英文名(#^.^#)](http://ename.shanbay.com.cn)
 
+
+[Day22 4.04 早读原文](http://mp.weixin.qq.com/s/-ZHClShtAq4Vg9ZtI9CiCg)
+
+If we didn't suffer,we wouldn't learn a thing.<br>
+
+如果我们没有吃过苦，我们就不会学到任何东西。【吃一堑长一智、不经一番寒彻骨，怎得梅花扑鼻香、阳光总在风雨后，道是无情亦有晴。】<br>
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTEzMTI3">
+</audio>
+
 [Day21 4.03 早读原文](http://mp.weixin.qq.com/s/BJXADWHr3QELqDMmK0TjmA)
 
 Through education,we can become a country where everyone,from every background gain the skills they need to get a good jog and live a happy and fulfilled life.<br>
