modify reading_early blog

--- a/_posts/2018-04-04-英语早读.md
+++ b/_posts/2018-04-04-英语早读.md
@@ -2,7 +2,7 @@
 layout: post
 title:  陪你早读的 TeacherGwen
 subtitle:   早读原文
-date:   2018-03-26
+date:   2018-04-04
 author: JP
 header-img: img/post-bg-debug.png
 catalog: true
@@ -17,7 +17,7 @@ tags:
 [点我取一个完美英文名(#^.^#)](http://ename.shanbay.com.cn)
 
 
-[Day22 4.04 早读原文](http://mp.weixin.qq.com/s/-ZHClShtAq4Vg9ZtI9CiCg)
+##### [Day22 4.04 早读原文](http://mp.weixin.qq.com/s/-ZHClShtAq4Vg9ZtI9CiCg)
 
 If we didn't suffer,we wouldn't learn a thing.<br>
 
@@ -26,7 +26,7 @@ If we didn't suffer,we wouldn't learn a thing.<br>
 <audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTEzMTI3">
 </audio>
 
-[Day21 4.03 早读原文](http://mp.weixin.qq.com/s/BJXADWHr3QELqDMmK0TjmA)
+##### [Day21 4.03 早读原文](http://mp.weixin.qq.com/s/BJXADWHr3QELqDMmK0TjmA)
 
 Through education,we can become a country where everyone,from every background gain the skills they need to get a good jog and live a happy and fulfilled life.<br>
 
@@ -35,7 +35,7 @@ Through education,we can become a country where everyone,from every background g
 <audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTEzMTIz">
 </audio>
 
-[Day20 4.02 早读原文](http://mp.weixin.qq.com/s/ibjq-H6P1HD4itNNYs9P4Q)
+##### [Day20 4.02 早读原文](http://mp.weixin.qq.com/s/ibjq-H6P1HD4itNNYs9P4Q)
 
 When I was young<br>
 I'd listen to the radio<br>
@@ -52,7 +52,7 @@ It made me smile.
 <audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTEzMDgx">
 </audio>
 
-[Day19 4.01 早读原文](https://mp.weixin.qq.com/s/K1bFV2fIIZIcuu_RIDy5Iw)
+##### [Day19 4.01 早读原文](https://mp.weixin.qq.com/s/K1bFV2fIIZIcuu_RIDy5Iw)
 
 Almost none of us commit suicide,and almost all of us self-destruct.
 
@@ -62,7 +62,7 @@ Almost none of us commit suicide,and almost all of us self-destruct.
 </audio>
 
 
-[Day18 3.31 早读原文](http://mp.weixin.qq.com/s/IIQF8Tf4Ce36UfRTugxMTg)
+##### [Day18 3.31 早读原文](http://mp.weixin.qq.com/s/IIQF8Tf4Ce36UfRTugxMTg)
 
 When you're young,it's all fillet steak,but as the years go by,you have to move on the cheaper cuts.
 
@@ -71,7 +71,7 @@ When you're young,it's all fillet steak,but as the years go by,you have to move 
 <audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTEzMDQy">
 </audio>
 
-[Day17 3.30 早读原文](http://mp.weixin.qq.com/s/3eLkbdTE9NEt6C19obsVXQ)
+##### [Day17 3.30 早读原文](http://mp.weixin.qq.com/s/3eLkbdTE9NEt6C19obsVXQ)
 
 The first step in solving any problem,is recognizing there is one.
 
@@ -80,7 +80,7 @@ The first step in solving any problem,is recognizing there is one.
 <audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTEzMDM0">
 </audio>
 
-[Day16 3.29 早读原文](http://mp.weixin.qq.com/s/DXNQb1fLyM1Sd63R7PfJ-w)
+##### [Day16 3.29 早读原文](http://mp.weixin.qq.com/s/DXNQb1fLyM1Sd63R7PfJ-w)
 
 Life is not about many blows you take.It is about how hard you hit back.
 
@@ -89,7 +89,7 @@ Life is not about many blows you take.It is about how hard you hit back.
 <audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTEzMDA3">
 </audio>
 
-[Day15 3.28 早读原文](http://mp.weixin.qq.com/s/Xi_8njlcD5UgnJ22BVCflQ)
+##### [Day15 3.28 早读原文](http://mp.weixin.qq.com/s/Xi_8njlcD5UgnJ22BVCflQ)
 
 Moon river,wider than a mile,I'm crossing you in style some day.
 
@@ -98,7 +98,7 @@ Moon river,wider than a mile,I'm crossing you in style some day.
 <audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTEyOTk5">
 </audio>
 
-[Day14 3.27 早读原文](http://mp.weixin.qq.com/s/ZM6lrtOK3H4VWxfz0_JXDA)
+##### [Day14 3.27 早读原文](http://mp.weixin.qq.com/s/ZM6lrtOK3H4VWxfz0_JXDA)
 
 Choosing our people is the closest we come to controlling our destiny. 
 
@@ -107,7 +107,7 @@ Choosing our people is the closest we come to controlling our destiny.
 <audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTEyOTkz">
 </audio>
 
-[Day13 3.26 早读原文](http://mp.weixin.qq.com/s/H9AU4lNDxr3m4gkzBGHRTw)
+##### [Day13 3.26 早读原文](http://mp.weixin.qq.com/s/H9AU4lNDxr3m4gkzBGHRTw)
 
 Very quietly I take my leave,<br> As quietly as I came here;<br> Quietly I wave good-bye,<br> To the rosy clouds in the western sky.
 
