modify early_morning blog's bg

--- a/_posts/2018-04-04-英语早读.md
+++ b/_posts/2018-04-04-英语早读.md
@@ -4,7 +4,7 @@ title:  陪你早读的 TeacherGwen
 subtitle:   早读原文
 date:   2018-04-04
 author: JP
-header-img: img/post-bg-swift.png
+header-img: img/post-bg-swift.jpg
 catalog: true
 tags:
 - 英语
