--- a/_posts/2018-04-04-英语早读.md
+++ b/_posts/2018-04-04-英语早读.md
@@ -2,7 +2,7 @@
 layout: post
 title:  陪你早读的 TeacherGwen
 subtitle:   早读原文
-date:   2018-04-04
+date:   2018-04-05
 author: JP
 header-img: img/post-bg-swift.jpg
 catalog: true
@@ -16,6 +16,14 @@ tags:
 
 [点我取一个完美英文名(#^.^#)](http://ename.shanbay.com.cn)
 
+##### [Day23 4.05 早读原文](http://mp.weixin.qq.com/s/KaH-g6mJaDKIVQm1Jxi_ng)
+
+A drizzling rain falls like tears on the Mourning Day.<br>
+
+清明时节雨纷纷<br>
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTEzMTMx">
+</audio>
 
 ##### [Day22 4.04 早读原文](http://mp.weixin.qq.com/s/-ZHClShtAq4Vg9ZtI9CiCg)
 
