modify early_morning blog

--- a/_posts/2018-04-05-英语早读.md
+++ b/_posts/2018-04-05-英语早读.md
@@ -1,4 +1,4 @@
----
+*---
 layout: post
 title:  陪你早读的 TeacherGwen
 subtitle:   早读原文
@@ -13,8 +13,6 @@ tags:
 ---
 
 >  **英语早读**
-
-[点我取一个完美英文名(#^.^#)](http://ename.shanbay.com.cn)
 
 ##### [Day23 4.05 早读原文](http://mp.weixin.qq.com/s/KaH-g6mJaDKIVQm1Jxi_ng)
 
@@ -51,11 +49,11 @@ waiting for my favorite songs<br>
 When they played I'd sing along<br>
 It made me smile.
 
-当我年轻的时候<br>
-我时常听收音机<br>
-等待我最喜爱的歌曲<br>
-当它们放出的时候，我会跟着唱<br>
-它让我快乐
+当我年轻的时候/<br>
+我时常听收音机/<br>
+等待我最喜爱的歌曲/<br>
+当它们放出的时候，我会跟着唱/<br>
+它让我快乐/
 
 <audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTEzMDgx">
 </audio>
@@ -125,5 +123,7 @@ Very quietly I take my leave,<br> As quietly as I came here;<br> Quietly I wave 
 </audio>
 
 ---
+
+[点我取一个完美英文名(#^.^#)](http://ename.shanbay.com.cn)
 
 ![xxx](http://img07.tooopen.com/images/20170316/tooopen_sy_201956178977.jpg)
