--- a/_posts/2018-04-06-英语早读.md
+++ b/_posts/2018-04-06-英语早读.md
@@ -2,7 +2,7 @@
 layout: post
 title:  陪你早读的 TeacherGwen
 subtitle:   早读原文
-date:   2018-04-05
+date:   2018-04-06
 author: JP
 header-img: img/post-bg-swift.jpg
 catalog: true
@@ -13,6 +13,15 @@ tags:
 ---
 
 >  **英语早读**
+
+##### [Day24 4.06 早读原文](http://mp.weixin.qq.com/s/3oM2naf23fxxgdXJgrfOZQ)
+Sometimes the impossible can become possible，if you're awesome.<br>
+
+如果你足够优秀，有时不可能也会变为可能。
+努力成为优秀的人，不辜负自己，不辜负短暂的青春 Good Night～<br>
+
+<audio style="height:140;width:400;" controls="controls" src="http://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTEzMTM0">
+</audio>
 
 ##### [Day23 4.05 早读原文](http://mp.weixin.qq.com/s/KaH-g6mJaDKIVQm1Jxi_ng)
 
