--- a/_posts/2018-04-07-英语早读.md
+++ b/_posts/2018-04-07-英语早读.md
@@ -2,7 +2,7 @@
 layout: post
 title:  陪你早读的 TeacherGwen
 subtitle:   早读原文
-date:   2018-04-06
+date:   2018-04-07
 author: JP
 header-img: img/post-bg-swift.jpg
 catalog: true
@@ -13,6 +13,16 @@ tags:
 ---
 
 >  **英语早读**
+
+
+
+##### [Day25 4.07 早读原文](http://mp.weixin.qq.com/s/HBEZWOK-aU3b32IkflX2-Q)
+The world has always been broken,that's why we need good cops.<br>
+
+这个世界本来就是一团糟，所以我们才需要好警察。<br>
+
+<audio style="height:140;width:400;" controls="controls" src="http://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTEzMTUy">
+</audio>
 
 ##### [Day24 4.06 早读原文](http://mp.weixin.qq.com/s/3oM2naf23fxxgdXJgrfOZQ)
 Sometimes the impossible can become possible，if you're awesome.<br>
