--- a/_posts/2018-04-08-英语早读.md
+++ b/_posts/2018-04-08-英语早读.md
@@ -2,7 +2,7 @@
 layout: post
 title:  陪你早读的 TeacherGwen
 subtitle:   早读原文
-date:   2018-04-07
+date:   2018-04-08
 author: JP
 header-img: img/post-bg-swift.jpg
 catalog: true
@@ -14,6 +14,13 @@ tags:
 
 >  **英语早读**
 
+##### [Day26 4.08 早读原文]http://mp.weixin.qq.com/s/S5TZyxe-Q5eTsUoMHuG4Hg)
+Life's a roller coaster,but I'm tall enough to ride.<br>
+
+生活是一辆过山车，但我够高了，可以乘坐。<br>
+
+<audio style="height:140;width:400;" controls="controls" src="http://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTEzMTU2">
+</audio>
 
 
 ##### [Day25 4.07 早读原文](http://mp.weixin.qq.com/s/HBEZWOK-aU3b32IkflX2-Q)
