add early_morning blog

--- a/_posts/2018-04-09-英语早读.md
+++ b/_posts/2018-04-09-英语早读.md
@@ -2,7 +2,7 @@
 layout: post
 title:  陪你早读的 TeacherGwen
 subtitle:   早读原文
-date:   2018-04-08
+date:   2018-04-09
 author: JP
 header-img: img/post-bg-swift.jpg
 catalog: true
@@ -13,6 +13,14 @@ tags:
 ---
 
 >  **英语早读**
+
+##### [Day27 4.09 早读原文](http://mp.weixin.qq.com/s/ZvKYU1KMBLQyYwJNY1lgtQ)
+What's on a person's face is not always what's in their heart.<br>
+
+知人知面不知心。<br>
+
+<audio style="height:140;width:400;" controls="controls" src="http://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTEzMjA2">
+</audio>
 
 ##### [Day26 4.08 早读原文](http://mp.weixin.qq.com/s/S5TZyxe-Q5eTsUoMHuG4Hg)
 Life's a roller coaster,but I'm tall enough to ride.<br>
