--- a/_posts/2018-04-10-英语早读.md
+++ b/_posts/2018-04-10-英语早读.md
@@ -2,7 +2,7 @@
 layout: post
 title:  陪你早读的 TeacherGwen
 subtitle:   早读原文
-date:   2018-04-09
+date:   2018-04-10
 author: JP
 header-img: img/post-bg-swift.jpg
 catalog: true
@@ -13,6 +13,14 @@ tags:
 ---
 
 >  **英语早读**
+
+##### [Day28 4.10 早读原文](http://mp.weixin.qq.com/s/5-0b-EB7k0X2vTCf5Fk9wA)
+Only true love can save the world.<br>
+
+只有真爱可以拯救这个世界。<br>
+
+<audio style="height:140;width:400;" controls="controls" src="http://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTEzMjI5">
+</audio>
 
 ##### [Day27 4.09 早读原文](http://mp.weixin.qq.com/s/ZvKYU1KMBLQyYwJNY1lgtQ)
 What's on a person's face is not always what's in their heart.<br>
