--- a/_posts/2017-02-15-Git指令整理.md
+++ b/_posts/2017-02-15-Git指令整理.md
@@ -3,7 +3,7 @@ layout:     post
 title:      Git指令整理
 subtitle:   不适合阅读的整理的一些个人常用的 Git 指令
 date:       2017-02-15
-author:     BY
+author:     BY、JP
 header-img: img/post-bg-ios9-web.jpg
 catalog: true
 tags:
@@ -14,6 +14,29 @@ tags:
 
 >随便整理的一些自用的Git指令
 
+# 码云创建Git仓库
+
+#### Git全局设置：
+
+git config --global user.name "your name"
+git config --global user.email "email@example.com"
+
+#### 创建Git仓库：
+
+mkdir Project -- 创建你的项目目录
+cd Project --进入你的项目目录
+git init 
+touch README.md
+git add README.md
+git commit -m "first commit"
+git remote add origin https://gitee.com/码云用户名/项目名.git
+git push -u origin master
+
+#### 已有项目
+
+cd existing_git_repo
+git remote add origin https://gitee.com/码云用户名/项目名.git
+git push -u origin master
 
 # GitHub创建仓库提示代码
 
