add early_morning blog

--- a/_posts/2018-04-11-英语早读.md
+++ b/_posts/2018-04-11-英语早读.md
@@ -2,7 +2,7 @@
 layout: post
 title:  陪你早读的 TeacherGwen
 subtitle:   早读原文
-date:   2018-04-10
+date:   2018-04-11
 author: JP
 header-img: img/post-bg-swift.jpg
 catalog: true
@@ -13,6 +13,19 @@ tags:
 ---
 
 >  **英语早读**
+
+##### [Day29 4.11 早读原文](http://mp.weixin.qq.com/s/5-0b-EB7k0X2vTCf5Fk9wA)
+I wonder how I wonder why <br>
+Yesterday you told me about the bule blue sky <br>
+And all that I can see is just another lemon tree<br>
+
+直译：我想知道为什么，昨天还和我说蓝蓝的天空呢，而今天我看到的只不过是另一颗柠檬树罢了。<br>
+blue sky（晴天、蓝蓝的天空）暗指愉快的心情<br>
+lemon tree（柠檬树）暗指生活中的酸侧和苦楚<br>
+我想知道为什么，昨天还都开开心心的呢，而今天我看到的竟是生活的酸测。
+
+<audio style="height:140;width:400;" controls="controls" src="http://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTEzMjM3">
+</audio>
 
 ##### [Day28 4.10 早读原文](http://mp.weixin.qq.com/s/5-0b-EB7k0X2vTCf5Fk9wA)
 Only true love can save the world.<br>
