--- a/_posts/2018-04-12-英语早读.md
+++ b/_posts/2018-04-12-英语早读.md
@@ -2,7 +2,7 @@
 layout: post
 title:  陪你早读的 TeacherGwen
 subtitle:   早读原文
-date:   2018-04-11
+date:   2018-04-12
 author: JP
 header-img: img/post-bg-swift.jpg
 catalog: true
@@ -13,6 +13,15 @@ tags:
 ---
 
 >  **英语早读**
+
+##### [Day30 4.12 早读原文](http://mp.weixin.qq.com/s/usmxK1YyXaHWOhZjhs0Ulw)
+You can't be successful at everything. So any vision of success has to admit what it's losing out on.<br>
+
+你不可能凡事成功，所以任何成功的愿景都必须承认失败的存在。
+胜败乃兵家常事，不纠结一时之败，大不了从头再来！
+
+<audio style="height:140;width:400;" controls="controls" src="http://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTEzMjQ4">
+</audio>
 
 ##### [Day29 4.11 早读原文](http://mp.weixin.qq.com/s/5-0b-EB7k0X2vTCf5Fk9wA)
 I wonder how I wonder why <br>
