add early_morning blog

--- a/_posts/2018-04-14-英语早读.md
+++ b/_posts/2018-04-14-英语早读.md
@@ -2,7 +2,7 @@
 layout: post
 title:  陪你早读的 TeacherGwen
 subtitle:   早读原文
-date:   2018-04-12
+date:   2018-04-14
 author: JP
 header-img: img/post-bg-swift.jpg
 catalog: true
@@ -13,6 +13,21 @@ tags:
 ---
 
 >  **英语早读**
+##### [Day31 4.14 早读原文](http://mp.weixin.qq.com/s/8vYV_mg4zHTT-quVZEm4ig)
+Sometimes I jump ahead in our life together, and I see a time near the end, I can predict the future and everything has settled. <br>
+
+我们休戚以共，有时能预见到未来，一切井然有序，如你所料。
+
+<audio style="height:140;width:400;" controls="controls" src="http://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTEzMjc2">
+</audio>
+
+##### [Day32 4.13 早读原文](http://mp.weixin.qq.com/s/m7AnaDK2SSx5lV1Gxmvwdw)
+Sometimes we act, not for ourselves, but because we believe plainly and simply it is the right thing to do.<br>
+
+有时候我们行动不是为了我们自己，而是单纯的相信我们做这件事是正确的。
+
+<audio style="height:140;width:400;" controls="controls" src="http://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTEzMjY0">
+</audio>
 
 ##### [Day30 4.12 早读原文](http://mp.weixin.qq.com/s/usmxK1YyXaHWOhZjhs0Ulw)
 You can't be successful at everything. So any vision of success has to admit what it's losing out on.<br>
