--- a/_posts/2018-04-15-英语早读.md
+++ b/_posts/2018-04-15-英语早读.md
@@ -2,7 +2,7 @@
 layout: post
 title:  陪你早读的 TeacherGwen
 subtitle:   早读原文
-date:   2018-04-14
+date:   2018-04-15
 author: JP
 header-img: img/post-bg-swift.jpg
 catalog: true
@@ -13,6 +13,14 @@ tags:
 ---
 
 >  **英语早读**
+##### [Day32 4.15 早读原文](http://mp.weixin.qq.com/s/LobxES7pU6oKTCHdM37zOA)
+It's a land of magic and wonder,worth cherishing in every way. <br>
+
+这片土地充满魔力和奇迹，她的一切都值得珍惜。
+
+<audio style="height:140;width:400;" controls="controls" src="http://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTEzMjgw">
+</audio>
+
 ##### [Day31 4.14 早读原文](http://mp.weixin.qq.com/s/8vYV_mg4zHTT-quVZEm4ig)
 Sometimes I jump ahead in our life together, and I see a time near the end, I can predict the future and everything has settled. <br>
 
