--- a/_posts/2018-04-16-英语早读.md
+++ b/_posts/2018-04-16-英语早读.md
@@ -2,7 +2,7 @@
 layout: post
 title:  陪你早读的 TeacherGwen
 subtitle:   早读原文
-date:   2018-04-15
+date:   2018-04-16
 author: JP
 header-img: img/post-bg-swift.jpg
 catalog: true
@@ -13,6 +13,14 @@ tags:
 ---
 
 >  **英语早读**
+##### [Day33 4.16 早读原文](http://mp.weixin.qq.com/s/4oyAzQe1fLoVN0c_TC_YnQ)
+A single grain of rice can tip the scale. One man may be the difference between victory and defeat.<br>
+
+一粒米也会使天平倾斜，小兵也能立大功。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTEzMzQw">
+</audio>
+
 ##### [Day32 4.15 早读原文](http://mp.weixin.qq.com/s/LobxES7pU6oKTCHdM37zOA)
 It's a land of magic and wonder,worth cherishing in every way. <br>
 
