--- a/_posts/2018-04-17-英语早读.md
+++ b/_posts/2018-04-17-英语早读.md
@@ -2,7 +2,7 @@
 layout: post
 title:  陪你早读的 TeacherGwen
 subtitle:   早读原文
-date:   2018-04-16
+date:   2018-04-17
 author: JP
 header-img: img/post-bg-swift.jpg
 catalog: true
@@ -13,6 +13,15 @@ tags:
 ---
 
 >  **英语早读**
+
+
+#####  [Day34 4.17 早读原文](http://mp.weixin.qq.com/s/5diwy0lY8ftCrgCPiStdyw)
+Winston Churchill defined success as the ability to move from failure to failure, with no loss of enthusiasm.<br>
+
+丘吉尔将成功定义为，即使一次又一次的失败，也不减热情。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTEzMzYy">
+</audio>
 
 ##### [Day33 4.16 早读原文](http://mp.weixin.qq.com/s/4oyAzQe1fLoVN0c_TC_YnQ)
 A single grain of rice can tip the scale. One man may be the difference between victory and defeat.<br>
