--- a/_posts/2018-04-18-英语早读.md
+++ b/_posts/2018-04-18-英语早读.md
@@ -2,7 +2,7 @@
 layout: post
 title:  陪你早读的 TeacherGwen
 subtitle:   早读原文
-date:   2018-04-17
+date:   2018-04-18
 author: JP
 header-img: img/post-bg-swift.jpg
 catalog: true
@@ -14,6 +14,19 @@ tags:
 
 >  **英语早读**
 
+#####  [Day35 4.18 早读原文](http://mp.weixin.qq.com/s/GNwPzrTvS9n9KwvLhnR5cA)
+Oceans apart day after day<br>
+And I slowly go insane<br>
+I hear your voice on the line<br>
+But it doesn't stop the pain.
+
+重洋相隔渐远行，我欲疯癫心凋零；<br>
+电话声中闻君语，难解相思一缕情。<br>
+
+愿此情可待，守候有佳音。午安~
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTEzMzc4">
+</audio>
 
 #####  [Day34 4.17 早读原文](http://mp.weixin.qq.com/s/5diwy0lY8ftCrgCPiStdyw)
 Winston Churchill defined success as the ability to move from failure to failure, with no loss of enthusiasm.<br>
