--- a/_posts/2018-04-20-英语早读.md
+++ b/_posts/2018-04-20-英语早读.md
@@ -2,7 +2,7 @@
 layout: post
 title:  陪你早读的 TeacherGwen
 subtitle:   早读原文
-date:   2018-04-18
+date:   2018-04-20
 author: JP
 header-img: img/post-bg-swift.jpg
 catalog: true
@@ -13,6 +13,23 @@ tags:
 ---
 
 >  **英语早读**
+
+##### [Day37 4.20 早读原文](http://mp.weixin.qq.com/s/9y_hmadH4jTLm1WmHR0m8g)
+Every once in a while, you find someone who's iridescent, and when you do, nothing will ever compare.
+
+总有一天，你会遇见那个彩虹般绚丽的人。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTEzMzky">
+</audio>
+
+##### [Day36 4.19 早读原文](https://mp.weixin.qq.com/s/kCMsPmBT-StwOnE3zLz8eg)
+We are not born with a certain amount of resilience. It's a muscle, and that means we can build it.
+
+我们都不是生来就如此坚忍的，日复一日的锤炼，才铸就了钢铁之躯。
+哪有什么岁月静好，无非有人替你负重前行，珍视每个身边默默支持你的人。早安。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTEzMzg3">
+</audio>
 
 #####  [Day35 4.18 早读原文](http://mp.weixin.qq.com/s/GNwPzrTvS9n9KwvLhnR5cA)
 Oceans apart day after day<br>
