--- a/_posts/2017-08-16-计算机网络.md
+++ b/_posts/2017-08-16-计算机网络.md
@@ -1,10 +1,10 @@
 ---
 layout:     post
-title:      网络
-subtitle:   TCP/IP、Http、Socket的区别
+title:      TCP/IP、Http、Socket的区别
+subtitle:   
 date:       2017-08-16
 author:     JP
-header-img: img/post-bg-ios9-web.jpg
+header-img: img/post-bg-coffee.jpeg
 catalog: true
 tags:
     - TCP/IP
@@ -13,7 +13,7 @@ tags:
     
 ---
 
->随便整理的一些网络基础
+>整理的一些网络基础
 
 经常在笔试、面试或者工作的时候听到这些协议，虽然以前没怎么涉及过，但至少知道这些是和网络编程密不可分的知识，作为一个客户端开发程序员，如果可以懂得网络编程的话，他的作用和能力肯定会提升一个档次。原因很简单，这是个信息化时代，由于网络的存在使得人与人、人与网络的联系变得及其地紧密，游戏联网了才好玩，音视频在线了才更方便看。而且，对于一个程序员来说，懂得网络编程将使得自己的能力和价值得到更大的提升，从很多高级软件开发职位的招聘信息就可以看得出来：熟悉http，socket等网络连接编程，了解TCP/IP协议...那还等什么啊，TMD赶紧学啊，觉得对就要赶紧开个头，先把Tcp/Ip、Http、Socket都是些什么东西以及它们之间的区别搞清楚再说！
 
