--- a/_posts/2017-08-16-计算机网络.md
+++ b/_posts/2017-08-16-计算机网络.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      TCP/IP、Http、Socket的区别
+title:      TCP/IP、HTTP、Socket的区别
 subtitle:   
 date:       2017-08-16
 author:     JP
@@ -8,14 +8,14 @@ header-img: img/post-bg-coffee.jpeg
 catalog: true
 tags:
     - TCP/IP
-    - Http
+    - HTTP
     - Socket
     
 ---
 
 >整理的一些网络基础
 
-经常在笔试、面试或者工作的时候听到这些协议，虽然以前没怎么涉及过，但至少知道这些是和网络编程密不可分的知识，作为一个客户端开发程序员，如果可以懂得网络编程的话，他的作用和能力肯定会提升一个档次。原因很简单，这是个信息化时代，由于网络的存在使得人与人、人与网络的联系变得及其地紧密，游戏联网了才好玩，音视频在线了才更方便看。而且，对于一个程序员来说，懂得网络编程将使得自己的能力和价值得到更大的提升，从很多高级软件开发职位的招聘信息就可以看得出来：熟悉http，socket等网络连接编程，了解TCP/IP协议...那还等什么啊，TMD赶紧学啊，觉得对就要赶紧开个头，先把Tcp/Ip、Http、Socket都是些什么东西以及它们之间的区别搞清楚再说！
+经常在笔试、面试或者工作的时候听到这些协议，学过计算机的都应该知道这些是和网络编程密不可分的知识，作为一个客户端开发程序员，如果可以懂得网络编程的话，他的作用和能力肯定会提升一个档次。原因很简单，这是个信息化时代，由于网络的存在使得人与人、人与网络的联系变得及其地紧密，游戏联网了才好玩，音视频在线了才更方便看。而且，对于一个程序员来说，懂得网络编程将使得自己的能力和价值得到更大的提升，从很多高级软件开发职位的招聘信息就可以看得出来：熟悉http，socket等网络连接编程，了解TCP/IP协议...那还等什么啊，TMD赶紧学啊，觉得对就要赶紧开个头，先把Tcp/Ip、HTTP、Socket都是些什么东西以及它们之间的区别搞清楚再说！
 
 大学学习网络基础的时候老师讲过，网络由下往上分为物理层、数据链路层、网络层、传输层、会话层、表示层和应用层。通过初步的了解，我知道IP协议对应于网络层，TCP协议对应于传输层，而HTTP协议对应于应用层，三者从本质上来说没有可比性，socket则是对TCP/IP协议的封装和应用（程序员层面上）。也可以说，TPC/IP协议是传输层协议，主要解决数据如何在网络中传输，而HTTP是应用层协议，主要解决如何包装数据。关于TCP/IP和HTTP协议的关系，网络有一段比较容易理解的介绍：
 
