--- a/_posts/2018-04-22-英语早读.md
+++ b/_posts/2018-04-22-英语早读.md
@@ -2,7 +2,7 @@
 layout: post
 title:  陪你早读的 TeacherGwen
 subtitle:   早读原文
-date:   2018-04-20
+date:   2018-04-22
 author: JP
 header-img: img/post-bg-swift.jpg
 catalog: true
@@ -13,6 +13,23 @@ tags:
 ---
 
 >  **英语早读**
+
+##### [Day39 4.22 早读原文](https://mp.weixin.qq.com/s/yhpe_eKI-3GZcNmTak-54Q)
+Sometimes to love someone,you gotta be a stranger.
+
+原意：有时，爱一个人，你不得不装作陌生人。<br>
+意译：如果情深意笃，何惧形同陌路；此爱若是久长，岂在朝朝暮暮。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTEzNDM0">
+</audio>
+
+##### [Day38 4.21 早读原文](https://mp.weixin.qq.com/s/PmHhHrYxzAkFB6j77VbV_g)
+No one will surrender tonight.But I won't give in.I know what I want.
+
+今夜没人能幸存，但我不会放弃。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTEzNDA4">
+</audio>
 
 ##### [Day37 4.20 早读原文](http://mp.weixin.qq.com/s/9y_hmadH4jTLm1WmHR0m8g)
 Every once in a while, you find someone who's iridescent, and when you do, nothing will ever compare.
