--- a/_posts/2018-04-18-面向对象特性和原则.md
+++ b/_posts/2018-04-18-面向对象特性和原则.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  面向对象三大基本特性,五大基本原则
-subtitle: 面向对象
+subtitle: 	
 date:   2018-04-18
 author: JP
 header-img: img/post-bg-swift.jpg
