--- a/_posts/2018-04-22-英语早读.md
+++ b/_posts/2018-04-22-英语早读.md
@@ -13,6 +13,42 @@ tags:
 ---
 
 >  **英语早读**
+##### [Day43 4.26 早读原文](https://mp.weixin.qq.com/s/Mofhd6pc6M_Fv_ULV1uVLQ)
+The good deeds a man has done before defend him.
+
+以前行善积德会保护他（一个人之前做过的好事会保护他）。<br>
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTEzNTAz">
+</audio>
+
+##### [Day42 4.25 早读原文](https://mp.weixin.qq.com/s/gaFXCzzktmBlTJb7e0vtDA)
+I want you to gain the intelligence of spending time wisely, because while you're killing time, time is killing you.
+
+你要学会用智慧的方式度过时间，要知道你浪费的时间也在消磨你。<br>
+善用时间，时间亦会善待你。每天进步一点点，假以时日定不辜负。Morning~<br>
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTEzNDk1">
+</audio>
+
+##### [Day41 4.24 早读原文](https://mp.weixin.qq.com/s/8yBuxjM7lvEabWgHBrocrA)
+I must be strong and carry on,<br>
+Cause I know I don't belong here in heaven.
+
+我必坚忍前行，天堂不是我的归属。<br>
+哪有什么岁月静好，无非有人替你负重前行。懂得感恩，心怀善意，人间处处亦天堂。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTEzNDkw">
+</audio>
+
+##### [Day40 4.23 早读原文](https://mp.weixin.qq.com/s/AQaWJ6WwFzv3Ojcpj9pHRw)
+You can't out-clever a fox, so use his cleverness against him.
+
+你聪明不过狐狸，用它的机智战胜它。<br>
+以其人之道，还治其人之身。有勇亦需有谋，以柔克刚，以小胜大，才是智举。早安。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTEzNDc4">
+</audio>
+
 
 ##### [Day39 4.22 早读原文](https://mp.weixin.qq.com/s/yhpe_eKI-3GZcNmTak-54Q)
 Sometimes to love someone,you gotta be a stranger.
