--- a/_posts/2017-10-15-C#基础.md
+++ b/_posts/2017-10-15-C#基础.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
-title:      C#基础
-subtitle:   适合面试前看
+title:      C#基础知识整理
+subtitle:   
 date:       2017-10-15
 author:     JP
 header-img: img/post-bg-ios9-web.jpg
