--- a/_posts/2018-02-10-陈果情商课.md
+++ b/_posts/2018-02-10-陈果情商课.md
@@ -56,7 +56,9 @@ tags:
 
 6、宁静时，才会以闲情去欣赏生活之美、他人之美。 
 
-7、孤独不是姿态，是一份真正的境界，是心灵的一份诗意的栖居。因此不需寻找什么特定的安静的角落。孤独或许表现出沉默，但孤独与沉默没有必然关系。孤独者是思想的、精神的流浪者。抽烟或是饮酒，只是用一种麻痹的手段或是摆酷的手段，来营造一种孤独的虚假的表象。没有思想、没有精神的人是孤独不了的，充其量只是一个寂寞者而已。　　孤独没有某种形式可循。孤独不是刻意培训自己、让自己具有某种思想、某种气质。孤独是最原始、最本真的状态。人离开母体之后，便再也没有与任何人在物理上同在过。　　孤独是我们的命运，但这绝不是糟糕的事。当我们无法改变命运时，顺从的、恭敬的领会它。 
+7、孤独不是姿态，是一份真正的境界，是心灵的一份诗意的栖居。因此不需寻找什么特定的安静的角落。孤独或许表现出沉默，但孤独与沉默没有必然关系。孤独者是思想的、精神的流浪者。抽烟或是饮酒，只是用一种麻痹的手段或是摆酷的手段，来营造一种孤独的虚假的表象。没有思想、没有精神的人是孤独不了的，充其量只是一个寂寞者而已。<br>
+孤独没有某种形式可循。孤独不是刻意培训自己、让自己具有某种思想、某种气质。孤独是最原始、最本真的状态。人离开母体之后，便再也没有与任何人在物理上同在过。<br>
+孤独是我们的命运，但这绝不是糟糕的事。当我们无法改变命运时，顺从的、恭敬的领会它。 
 
 8、孤独是一种圆润，而不是一种缺失。 
 
@@ -107,7 +109,8 @@ tags:
 
 20、任何人之间很费力的事是解释。朋友之间无需解释，而是需要“同情的理解”与“理解的同情”。同情，不是说可怜你，而是与你有感同身受的情感。 
 
-21、成为朋友的两个人必须都是头脑清醒的人，这很重要。这就是为什么只有孤独者才能做朋友，惟其如此，才能分辨出什么是友爱、什么是依赖、什么是独立、什么是鼓励。　　才不会出现主角、陪衬人这样不平等的关系。朋友之间，两个人是平等的，相互扶持。 
+21、成为朋友的两个人必须都是头脑清醒的人，这很重要。这就是为什么只有孤独者才能做朋友，惟其如此，才能分辨出什么是友爱、什么是依赖、什么是独立、什么是鼓励。<br>
+才不会出现主角、陪衬人这样不平等的关系。朋友之间，两个人是平等的，相互扶持。 
 
 22、朋友双方是不会以友谊来相要挟、相约束的。朋友是为了让我们在了解自己的基础上变得更自由。所以，侵占朋友的时间也是一种罪恶。所以这就是为什么朋友之间见面前要先预约，你怎么舍得打乱朋友预先安排好的时间计划？ 
 
@@ -130,7 +133,7 @@ tags:
  
 4、人往往缺乏远见。只追求远处的一个个层出不穷的目标。 
 
-5、感恩不是仅仅是一句“谢谢”，而是要实际行动。　　“涌泉相报”不只是对给你善的人，而是给与全世界你能看到的所有人。被善感染之后，要去感染其他人、分享给其他所有人。 
+5、感恩不是仅仅是一句“谢谢”，而是要实际行动。“涌泉相报”不只是对给你善的人，而是给与全世界你能看到的所有人。被善感染之后，要去感染其他人、分享给其他所有人。 
 
 6、不要拒绝接受爱，这不是软弱。也不要害怕奉献自己的爱，这不意味着丧失，相反，从侧面反映了你的富足。 
 
@@ -145,7 +148,7 @@ tags:
 
 4、任何话，说多了就很廉价。“对不起”说多了就没有歉意了。真正的“对不起”是千斤重的，不仅是对你伤害过的这个人，更是对你自己的良知和道德。 
 
-5、忏悔时不应指望对方能包容你、原谅你，这样的初衷证明你没有任何的抱歉，你只是希望使自己早日摆脱掉对　　方的指责，这是一种自私、功利的目的。 
+5、忏悔时不应指望对方能包容你、原谅你，这样的初衷证明你没有任何的抱歉，你只是希望使自己早日摆脱掉对方的指责，这是一种自私、功利的目的。 
 
 6、当被伤害时，如果这种伤害能在时间中被抚平，那么得饶人处且饶人，不要让别人因为你的原因，背负着沉重的精神负担了此一生。 
 
