--- a/_posts/2018-04-29-英语早读.md
+++ b/_posts/2018-04-29-英语早读.md
@@ -2,7 +2,7 @@
 layout: post
 title:  陪你早读的 TeacherGwen
 subtitle:   早读原文
-date:   2018-04-22
+date:   2018-04-29
 author: JP
 header-img: img/post-bg-swift.jpg
 catalog: true
@@ -14,6 +14,33 @@ tags:
 
 >  **英语早读**
 
+##### [Day46 4.29 早读原文](https://mp.weixin.qq.com/s/5RJLAQzfwtZKGCZhEQyKCw)
+Sharing love is not losing love.
+Love is infinite.《彼得兔》
+
+分享一段爱并不会失去它，爱是无无限的。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTEzNTMw">
+</audio>
+
+##### [Day45 4.28 早读原文](https://mp.weixin.qq.com/s/tF4b4NzRgQyMJg5Psvo9Eg)
+Things happen the way they do. We may not know why at the time, but there must always be a reason.
+
+万物皆有准则，也许不知何时发生，一切尽在意料之中，又常常出忽意外。<br>
+道法自然，道生万物。早安。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTEzNTIz">
+</audio>
+
+##### [Day44 4.27 早读原文](https://mp.weixin.qq.com/s/rZELPr9UcCLGpp2cgJWCRA)
+-People make mistakes.
+-It's why they put rubbers on the ends of pencils.
+
+人们会犯错，这也难怪铅笔头上会有橡皮。<br>
+人非圣贤孰能无过。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTEzNTA4">
+</audio>
 
 ##### [Day43 4.26 早读原文](https://mp.weixin.qq.com/s/Mofhd6pc6M_Fv_ULV1uVLQ)
 The good deeds a man has done before defend him.
