add early_morning blog

--- a/_posts/2018-04-30-英语早读.md
+++ b/_posts/2018-04-30-英语早读.md
@@ -2,7 +2,7 @@
 layout: post
 title:  陪你早读的 TeacherGwen
 subtitle:   早读原文
-date:   2018-04-29
+date:   2018-04-30
 author: JP
 header-img: img/post-bg-swift.jpg
 catalog: true
@@ -13,6 +13,15 @@ tags:
 ---
 
 >  **英语早读**
+
+##### [Day47 4.30 早读原文](https://mp.weixin.qq.com/s/MY6Y59J-q4DBg1sy5sepzA)
+I didn't have to read many comic books to understand that every superhero had a weakness, something they had to overcome through an extraordinary act of courage.
+
+我无需读很多漫画书我便知道，每个超级英雄都有弱点，他们也要鼓足勇气去战胜一个有一个困境。<br>
+有勇气有果敢，失败亦无所谓，心无所谓，未来无畏。Morning~
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTEzNTg3">
+</audio>
 
 ##### [Day46 4.29 早读原文](https://mp.weixin.qq.com/s/5RJLAQzfwtZKGCZhEQyKCw)
 Sharing love is not losing love.
