--- a/_posts/2018-05-03-5月早读.md
+++ b/_posts/2018-05-03-5月早读.md
@@ -14,6 +14,15 @@ tags:
 
 >  **英语早读**
 
+##### [Day50 5.03 早读原文](https://mp.weixin.qq.com/s/ietWS-yZ08VS9u_bFZ9ctg)
+If you wanna change the world,start off by making your bed.
+
+如果你想要改变世界的话，从整理床铺开始吧。<br>
+一屋不扫，和何以扫天下。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTEzNjIx">
+</audio>
+
 ##### [Day49 5.02 早读原文](https://mp.weixin.qq.com/s/QcYmjphYitGVTFp-ZOWcng)
 I'll love you twice as much tomorrow/<br>
 I love you more than I can say.
