add early_morning blog

--- a/_posts/2018-05-04-5月早读.md
+++ b/_posts/2018-05-04-5月早读.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title:  陪你早读的 TeacherGwen
+title:  5月陪你早读的 TeacherGwen
 subtitle:   早读原文
-date:   2018-05-02
+date:   2018-05-04
 author: JP
 header-img: img/post-bg-swift.jpg
 catalog: true
@@ -13,6 +13,14 @@ tags:
 ---
 
 >  **英语早读**
+
+##### [Day51 5.04 早读原文](https://mp.weixin.qq.com/s/Qphak_Ok9GGo72Cf22kwMQ)
+The only wealth in this world is children.More than all the money and power on earth.
+
+孩子们是世界上唯一的财富，远胜于世间所有的财富和权力。<br>
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTEzNjMw">
+</audio>
 
 ##### [Day50 5.03 早读原文](https://mp.weixin.qq.com/s/ietWS-yZ08VS9u_bFZ9ctg)
 If you wanna change the world,start off by making your bed.
