--- a/_posts/2018-05-06-5月早读.md
+++ b/_posts/2018-05-06-5月早读.md
@@ -2,7 +2,7 @@
 layout: post
 title: 陪你早读的 TeacherGwen
 subtitle:   早读原文
-date:   2018-05-04
+date:   2018-05-06
 author: JP
 header-img: img/post-bg-swift.jpg
 catalog: true
@@ -13,6 +13,23 @@ tags:
 ---
 
 >  **英语早读**
+
+##### [Day53 5.06 早读原文](https://mp.weixin.qq.com/s/uXH9L-T17PnGC55YUPmjJA)
+There's no escaping your destiny.We can't spread panic.
+
+无人能逃脱命运，我们没必要传播恐慌。<br>
+命里有时终须有，命里无时莫强求。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTEzNjQy">
+</audio>
+
+##### [Day52 5.05 早读原文](https://mp.weixin.qq.com/s/6elSlf7DJx6qLF43Mq3dgg)
+Everyday in school they teach us how to solve problems, but none of those answers are in the real world.
+
+学校教我们如何解决问题，但没有一个答案可以用在现实人生。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTEzNjM0">
+</audio>
 
 ##### [Day51 5.04 早读原文](https://mp.weixin.qq.com/s/Qphak_Ok9GGo72Cf22kwMQ)
 The only wealth in this world is children.More than all the money and power on earth.
