modify early_morning blog

--- a/_posts/2018-05-06-5月早读.md
+++ b/_posts/2018-05-06-5月早读.md
@@ -14,6 +14,43 @@ tags:
 
 >  **英语早读**
 
+##### [Day56 5.10 早读原文](https://mp.weixin.qq.com/s/Fu_y9-H_ZreSTeAFZs2wmQ)
+God says we need to love our enemies.It's hard to do.But it can start by telling the truth.
+
+上帝让我们爱敌人，看起来很难，可以首先从坦诚面对开始。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTEzNzQ0">
+</audio>
+
+
+##### [Day55 5.09 早读原文](https://mp.weixin.qq.com/s/uvvdyPsNTURgsxpB19QoUA)
+Come, stop your crying, it will be all right.<br>
+Just take my hand, hold it tight.<br>
+I will protect you from all around you.<br>
+I will be here, don’t you cry.
+
+别哭我最爱的人，我的手你要握紧，我会一直保护你，请你不要再伤心。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTEzNzM5">
+</audio>
+
+
+##### [Day55 5.08 早读原文](https://mp.weixin.qq.com/s/IMfxK_nDoK__Bv0PkXG85w)
+When you eliminate the impossible, whatever remains, however improbable, must be the truth.
+
+当你排除了不可能的事，不管剩下什么，不管多不可能，都肯定是事实。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTEzNzQx">
+</audio>
+
+##### [Day54 5.07 早读原文](https://mp.weixin.qq.com/s/oeVJXY6HRhcuiwI7VObdGg)
+How you present yourself on the outside reflects how you feel on the inside.
+
+你展示出的自己，映射出内心的自我。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTEzNzEw">
+</audio>
+
 ##### [Day53 5.06 早读原文](https://mp.weixin.qq.com/s/uXH9L-T17PnGC55YUPmjJA)
 There's no escaping your destiny.We can't spread panic.
 
