add early_morning blog

--- a/_posts/2018-05-11-5月早读.md
+++ b/_posts/2018-05-11-5月早读.md
@@ -2,7 +2,7 @@
 layout: post
 title: 陪你早读的 TeacherGwen
 subtitle:   早读原文
-date:   2018-05-06
+date:   2018-05-11
 author: JP
 header-img: img/post-bg-swift.jpg
 catalog: true
@@ -14,6 +14,14 @@ tags:
 
 >  **英语早读**
 
+##### [Day57 5.11 早读原文](https://mp.weixin.qq.com/s/z_hwiqdNV7xyHpMkv-fjrw)
+We'll walk, hand in hand, until you let go.I made you,but you made me a mother.
+
+手牵手，一起走，直到你放开手。我孕育了你，但是你也让我成为了一位母亲。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTEzNzYw">
+</audio>
+
 ##### [Day56 5.10 早读原文](https://mp.weixin.qq.com/s/Fu_y9-H_ZreSTeAFZs2wmQ)
 God says we need to love our enemies.It's hard to do.But it can start by telling the truth.
 
@@ -21,7 +29,6 @@ God says we need to love our enemies.It's hard to do.But it can start by telling
 
 <audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTEzNzQ0">
 </audio>
-
 
 ##### [Day55 5.09 早读原文](https://mp.weixin.qq.com/s/uvvdyPsNTURgsxpB19QoUA)
 Come, stop your crying, it will be all right.<br>
