add early_morning blog

--- a/_posts/2018-05-12-5月早读.md
+++ b/_posts/2018-05-12-5月早读.md
@@ -2,7 +2,7 @@
 layout: post
 title: 陪你早读的 TeacherGwen
 subtitle:   早读原文
-date:   2018-05-11
+date:   2018-05-12
 author: JP
 header-img: img/post-bg-swift.jpg
 catalog: true
@@ -13,6 +13,15 @@ tags:
 ---
 
 >  **英语早读**
+
+##### [Day58 5.12 早读原文](https://mp.weixin.qq.com/s/bdz4db7xlbVHQqlOZPencg)
+It's not about the destination,it's about the journey.
+
+重要的不是终点，享受旅程才是要义。<br>
+心灵和身体，总有一个在路上，不止苟且，还有远方。周末愉快，早安。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTEzNzc5">
+</audio>
 
 ##### [Day57 5.11 早读原文](https://mp.weixin.qq.com/s/z_hwiqdNV7xyHpMkv-fjrw)
 We'll walk, hand in hand, until you let go.I made you,but you made me a mother.
