--- a/_posts/2018-05-13-5月早读.md
+++ b/_posts/2018-05-13-5月早读.md
@@ -2,7 +2,7 @@
 layout: post
 title: 陪你早读的 TeacherGwen
 subtitle:   早读原文
-date:   2018-05-12
+date:   2018-05-13
 author: JP
 header-img: img/post-bg-swift.jpg
 catalog: true
@@ -13,6 +13,14 @@ tags:
 ---
 
 >  **英语早读**
+
+##### [Day59 5.13 早读原文](https://mp.weixin.qq.com/s/U53EJM06PfKlvqDuP9Trfg)
+You have to trust your gut and try to do the right thing, because it's our choices that make us who we are.
+
+你必须相信你的直觉，努力去做正确的事情，因为是我们的选择决定了我们是谁。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTEzNzkx">
+</audio>
 
 ##### [Day58 5.12 早读原文](https://mp.weixin.qq.com/s/bdz4db7xlbVHQqlOZPencg)
 It's not about the destination,it's about the journey.
